# python_playground

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pytest.yml
python_playground/: simple_test.py
tests/: test_simple_test.py
